[gd_scene load_steps=15 format=3 uid="uid://gxbcxtjjnj5"]

[ext_resource type="Texture2D" uid="uid://cluehm6rovn2i" path="res://Assets/Background/SIAM.jpeg" id="1_x6jn2"]
[ext_resource type="Texture2D" uid="uid://cvdklbbxfyit" path="res://Assets/Sprites/player.png" id="2_tanm1"]
[ext_resource type="Script" uid="uid://d2mfjs5ikfxan" path="res://Assets/Scripts/CharacterBody2D.gd" id="3_6qsvb"]
[ext_resource type="Texture2D" uid="uid://c51dbfpvuju5l" path="res://icon.svg" id="4_shbfh"]
[ext_resource type="Script" uid="uid://d0li831jrt4ye" path="res://Assets/Scripts/survival_system.gd" id="4_tanm1"]
[ext_resource type="Script" uid="uid://1y0av51fhtqf" path="res://Assets/Scripts/item_spawner.gd" id="5_6qsvb"]
[ext_resource type="PackedScene" uid="uid://c1w4p6xd35ih1" path="res://Assets/Scenes/collectible_item.tscn" id="6_fadmi"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_fadmi"]
radius = 22.0
height = 62.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cbhea"]
bg_color = Color(0.6784314, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tanm1"]
bg_color = Color(0.6784314, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6qsvb"]
bg_color = Color(0.9490196, 0.5882353, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fadmi"]
bg_color = Color(0, 0.6, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_shbfh"]
bg_color = Color(0.36775693, 0.62592906, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hxcs8"]
bg_color = Color(0.6, 0, 0.6, 1)

[node name="Node2D" type="Node2D"]

[node name="Background" type="Sprite2D" parent="."]
scale = Vector2(3, 3.139)
texture = ExtResource("1_x6jn2")
centered = false

[node name="CharacterBody2D" type="CharacterBody2D" parent="."]
position = Vector2(1, 0)
script = ExtResource("3_6qsvb")

[node name="Sprite2D" type="Sprite2D" parent="CharacterBody2D"]
scale = Vector2(5, 5)
texture = ExtResource("2_tanm1")
region_enabled = true
region_rect = Rect2(0, 0, 16, 16)

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D"]
position = Vector2(0, 3)
shape = SubResource("CapsuleShape2D_fadmi")

[node name="Camera2D" type="Camera2D" parent="CharacterBody2D"]
limit_left = 0
limit_top = 0
limit_right = 1644
limit_bottom = 2649
position_smoothing_enabled = true
drag_left_margin = 0.0
drag_top_margin = 0.0
drag_right_margin = 0.0
drag_bottom_margin = 0.0

[node name="CanvasLayer" type="CanvasLayer" parent="CharacterBody2D"]

[node name="PauseMenu" type="ColorRect" parent="CharacterBody2D/CanvasLayer"]
process_mode = 3
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.011764706, 0.011764706, 0, 0.4745098)

[node name="VBoxContainer" type="VBoxContainer" parent="CharacterBody2D/CanvasLayer/PauseMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="TombolSave" type="Button" parent="CharacterBody2D/CanvasLayer/PauseMenu/VBoxContainer"]
layout_mode = 2
text = "Save Game"

[node name="TombolKeluar" type="Button" parent="CharacterBody2D/CanvasLayer/PauseMenu/VBoxContainer"]
layout_mode = 2
text = "Keluar"

[node name="StatusBars" type="VBoxContainer" parent="CharacterBody2D/CanvasLayer"]
offset_right = 40.0
offset_bottom = 40.0

[node name="HealthBar" type="ProgressBar" parent="CharacterBody2D/CanvasLayer/StatusBars"]
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_cbhea")
theme_override_styles/fill = SubResource("StyleBoxFlat_tanm1")
step = 0.1

[node name="HungerBar" type="ProgressBar" parent="CharacterBody2D/CanvasLayer/StatusBars"]
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_6qsvb")

[node name="ThirstBar" type="ProgressBar" parent="CharacterBody2D/CanvasLayer/StatusBars"]
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_fadmi")

[node name="StaminaBar" type="ProgressBar" parent="CharacterBody2D/CanvasLayer/StatusBars"]
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_shbfh")

[node name="SanityBar" type="ProgressBar" parent="CharacterBody2D/CanvasLayer/StatusBars"]
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_hxcs8")

[node name="HUD_Bawah" type="HBoxContainer" parent="CharacterBody2D/CanvasLayer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -220.0
offset_top = -138.0
offset_right = 180.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 20

[node name="SlotKiri" type="PanelContainer" parent="CharacterBody2D/CanvasLayer/HUD_Bawah"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="CharacterBody2D/CanvasLayer/HUD_Bawah/SlotKiri"]
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="IconTas" type="TextureRect" parent="CharacterBody2D/CanvasLayer/HUD_Bawah"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("4_shbfh")

[node name="SlotKanan" type="PanelContainer" parent="CharacterBody2D/CanvasLayer/HUD_Bawah"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="CharacterBody2D/CanvasLayer/HUD_Bawah/SlotKanan"]
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="InventoryWindow" type="Panel" parent="CharacterBody2D/CanvasLayer"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -220.0
offset_top = -220.0
offset_right = 180.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2

[node name="GridBarang" type="GridContainer" parent="CharacterBody2D/CanvasLayer/InventoryWindow"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 5

[node name="SurvivalSystem" type="Node" parent="CharacterBody2D"]
script = ExtResource("4_tanm1")

[node name="item_spawner" type="Node" parent="."]
script = ExtResource("5_6qsvb")
item_scene = ExtResource("6_fadmi")

[node name="DayNightCycle" type="CanvasModulate" parent="."]
